--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -38,23 +38,23 @@
     android:background="@drawable/bgwallet">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello!"
         android:textColor="#fff"
         android:textSize="20dp"
-        android:layout_marginHorizontal="150dp"
+        android:gravity="center"
         android:layout_marginTop="15dp"
         android:id="@+id/hello"
         />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Your Name"
+        android:text="Your name"
         android:textColor="#fff"
         android:layout_below="@id/hello"
-        android:layout_marginHorizontal="100dp"
-        android:textSize="30dp"
+        android:textSize="25dp"
+        android:gravity="center"
         android:fontFamily="@font/lucida"
         android:id="@+id/displayName"
         />
