--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:layout_marginVertical="170dp"
             android:text="Sign in to your Account"
             android:fontFamily="@font/lucida"
-            android:textColor="@color/Ash"
+            android:textColor="#000"
             android:textSize="20sp" />
     </RelativeLayout>
 
@@ -44,6 +44,7 @@
         android:text="Email"
         android:fontFamily="@font/lucida"
         android:textSize="20dp"
+        android:textColor="#000"
         android:layout_marginHorizontal="20dp"/>
 
     <EditText
@@ -64,6 +65,7 @@
             android:fontFamily="@font/lucida"
             android:text="Password"
             android:textSize="20dp"
+            android:textColor="#000"
             android:layout_marginHorizontal="20dp"/>
 
         <EditText
@@ -96,7 +98,7 @@
             android:text="Remember me"
             android:id="@+id/lRemember"
             android:fontFamily="@font/lucida"
-            android:textColor="@color/Ash"
+            android:textColor="#000"
             android:layout_marginHorizontal="20dp" />
     </RelativeLayout>
     <RelativeLayout
@@ -113,6 +115,13 @@
             android:background="@drawable/btbg"
             android:layout_marginHorizontal="310dp"
             />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar1"
+            android:layout_marginHorizontal="180dp"
+            android:visibility="invisible"
+            />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
@@ -124,7 +133,7 @@
             android:layout_height="wrap_content"
             android:text="Don't have an account?"
             android:fontFamily="@font/lucida"
-            android:textColor="@color/Ash"
+            android:textColor="#000"
             android:layout_marginLeft="60dp"
             android:layout_marginRight="140dp"
             android:textSize="16dp"/>
