--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
             android:layout_marginVertical="140dp"
             android:text="Create an account to proceed..."
             android:fontFamily="@font/lucida"
-            android:textColor="@color/Ash"
+            android:textColor="#000"
             android:textSize="20sp" />
     </RelativeLayout>
     <RelativeLayout
@@ -39,9 +39,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Name"
+            android:text="Full Name"
             android:fontFamily="@font/lucida"
             android:textSize="20dp"
+            android:textColor="#000"
             android:layout_marginHorizontal="20dp"/>
 
         <EditText
@@ -59,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Email"
+            android:textColor="#000"
             android:fontFamily="@font/lucida"
             android:textSize="20dp"
             android:layout_marginHorizontal="20dp"/>
@@ -82,6 +84,7 @@
             android:fontFamily="@font/lucida"
             android:text="Phone Number"
             android:textSize="20dp"
+            android:textColor="#000"
             android:layout_marginHorizontal="20dp"/>
 
         <EditText
@@ -101,6 +104,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/lucida"
             android:text="Password"
+            android:textColor="#000"
             android:textSize="20dp"
             android:layout_marginHorizontal="20dp"/>
 
@@ -108,9 +112,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
             android:inputType="textPassword"
-            android:id="@+id/passwordForRegister"
-            android:layout_marginVertical="20dp"/>
+            android:id="@+id/passwords"
+            />
     </RelativeLayout>
 
 
@@ -128,18 +133,26 @@
             android:id="@+id/buttonForRegister"
             android:layout_marginHorizontal="310dp"
             />
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_marginHorizontal="180dp"
+            android:visibility="invisible"
+            />
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp">
+        android:layout_marginTop="70dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Already have an account?"
             android:fontFamily="@font/lucida"
-            android:textColor="@color/Ash"
+            android:textColor="#000"
             android:layout_marginLeft="70dp"
             android:textSize="16dp"/>
 
