--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -11,21 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="210dp"
         android:background="@color/Pink"
+        android:id="@+id/relative2"
         >
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:layout_marginTop="15dp"
-            android:id="@+id/back"
+            android:id="@+id/bacckk"
             android:layout_marginHorizontal="10dp"
             android:tint="#fff"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Search Result"
-            android:textSize="24dp"
-            android:layout_marginHorizontal="120dp"
+            android:textSize="20dp"
+            android:gravity="center"
             android:textColor="#fff"
             android:layout_marginTop="20dp"
             />
@@ -42,12 +43,21 @@
             android:fontFamily="@font/lucida"
             android:textColor="#fff"
             />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/bacckk"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/line"
+            android:id="@+id/lines"
+            android:layout_marginHorizontal="120dp"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/toesult"
+            android:id="@+id/toResult"
             android:text="to"
-            android:layout_marginHorizontal="300dp"
+            android:layout_marginHorizontal="305dp"
             android:layout_marginTop="90dp"
             android:textSize="25dp"
             android:textStyle="bold"
@@ -55,109 +65,58 @@
             android:fontFamily="@font/lucida"
             android:textColor="#fff"
             />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_person_outline_black_24dp"
+            android:tint="#fff"
+            android:layout_below="@id/toResult"
+            android:layout_marginHorizontal="320dp"
+            android:layout_marginTop="20dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/personresult"
+            android:text="1"
+            android:layout_marginHorizontal="365dp"
+            android:layout_marginTop="25dp"
+            android:textSize="15dp"
+            android:layout_below="@id/lines"
+            android:textStyle="bold"
+            android:fontFamily="@font/lucida"
+            android:textColor="#fff"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/theclass"
+            android:text="Business Class"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            android:layout_marginTop="25dp"
+            android:textColor="#fff"
+            android:fontFamily="@font/lucida"
+            android:gravity="center"
+            android:layout_below="@id/lines"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/DateResult"
             android:text="1/22/2019"
-            android:layout_marginHorizontal="130dp"
+            android:layout_marginHorizontal="13dp"
             android:layout_marginTop="25dp"
-            android:textSize="25dp"
-            android:layout_below="@id/fromResult"
+            android:textSize="15dp"
+            android:layout_below="@id/lines"
             android:textStyle="bold"
             android:fontFamily="@font/lucida"
             android:textColor="#fff"
             />
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="140dp"
-           android:background="#fff"
-           android:layout_marginHorizontal="10dp"
-           android:layout_marginVertical="10dp"
-           >
-
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:id="@+id/price"
-               android:text="N6,000"
-               android:textSize="25dp"
-               android:textStyle="bold"
-               android:layout_marginTop="5dp"
-               android:textColor="@color/Pink"
-               android:fontFamily="@font/lucida"
-               android:layout_marginHorizontal="285dp"
-               />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Departure"
-               android:layout_below="@+id/price"
-               android:layout_marginHorizontal="20dp"
-               android:layout_marginTop="15dp"
-               android:textSize="15dp"
-               android:id="@+id/depText"
-               android:textStyle="bold"
-               android:textAllCaps="true"
-               android:fontFamily="@font/lucida"
-               />
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="12:00am"
-               android:layout_below="@+id/depText"
-               android:layout_marginHorizontal="0dp"
-               android:layout_marginTop="7dp"
-               android:textSize="25dp"
-               android:textStyle="bold"
-               android:textAllCaps="true"
-               android:textColor="@color/Pink"
-               android:id="@+id/TimeDeparture"
-               android:fontFamily="@font/lucida"
-               />
-           <ImageView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_below="@id/depText"
-               android:src="@drawable/train"
-               android:layout_marginHorizontal="190dp"
-               />
-
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="Arrival"
-               android:layout_below="@+id/price"
-               android:layout_marginHorizontal="290dp"
-               android:layout_marginTop="15dp"
-               android:textSize="15dp"
-               android:id="@+id/ArrText"
-               android:textStyle="bold"
-               android:textAllCaps="true"
-               android:fontFamily="@font/lucida"
-               />
-
-           <TextView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="2:00am"
-               android:layout_below="@+id/depText"
-               android:layout_marginHorizontal="280dp"
-               android:layout_marginTop="7dp"
-               android:textSize="25dp"
-               android:textStyle="bold"
-               android:textAllCaps="true"
-               android:textColor="@color/Pink"
-               android:id="@+id/TimeArrival"
-               android:fontFamily="@font/lucida"
-               />
-
-       </RelativeLayout>
 
     </RelativeLayout>
+<androidx.recyclerview.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/recycle"/>
 </LinearLayout>
