--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -89,16 +89,47 @@
             android:layout_marginHorizontal="20dp"/>
         <EditText
             android:id="@+id/dateSelect"
-            android:layout_width="350dp"
+            android:layout_width="170dp"
             android:layout_height="45dp"
             android:layout_marginVertical="20dp"
             android:layout_marginHorizontal="20dp"
-            android:drawableEnd="@drawable/ic_date_range_black_24dp"
-            android:drawableRight="@drawable/ic_date_range_black_24dp" />
+             />
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_date_range_black_24dp"
+            android:background="#fff"
+            android:id="@+id/fordate"
+            android:layout_marginHorizontal="160dp"
+            android:layout_marginTop="30dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Class"
+            android:fontFamily="@font/lucida"
+            android:textSize="20dp"
+            android:textColor="#000"
+            android:layout_marginHorizontal="230dp"/>
+        <Spinner
+            android:id="@+id/classs"
+            android:layout_width="350dp"
+            android:layout_height="45dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginVertical="30dp"
+            android:layout_marginLeft="225dp"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Persons"
+            android:fontFamily="@font/lucida"
+            android:textSize="20dp"
+            android:textColor="#000"
+            android:layout_marginHorizontal="20dp"/>
         <Spinner
             android:layout_width="200dp"
             android:layout_height="45dp"
